--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-hooks-todo",
+  "name": "react-hooks-typescript-todo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,7 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "kill": "lsof -nti:3000 | xargs kill -9"
   },
   "eslintConfig": {
     "extends": "react-app"
